syntax = "proto3";

package com.namely.protobuf.chief_of_state.samples;

message CreateEvent {
  string id = 1;
}

message AppendEvent {
  string id = 1;
  string appended = 2;
}
