syntax = "proto3";

package com.namely.protobuf.chief_of_state.samples;

import "sample_app/state.proto";

message CreateRequest {
  string id = 1;
}

message AppendRequest {
  string id = 1;
  string append = 2;
}

message GetRequest {
  string id = 1;
}

service SampleService {
  rpc CreateCall(CreateRequest) returns (State);
  rpc AppendCall(AppendRequest) returns (State);
  rpc GetCall(GetRequest) returns (State);
}
